# n-Body_simulation

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
CUDA_parallel/: CUDA_parallel.cu  CUDA_parallel.cuh  body.h  main.cpp  main.h
OMP_parallel/: body.h  main.cpp  main.h
res/shaders/: core.vert  mass_shader.frag  red.frag
sequential/: body.cpp  body.h  main.cpp  main.h
